--- a/index.html
+++ b/index.html
@@ -1,364 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey={{KAKAO_MAP_JS_KEY}}&libraries=services"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-      html {
-        height: 100%;
-      }
-      #map {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_JS_KEY"></script>
+</head>
+<body>
+    <div id="map" style="width:100%;height:100vh;"></div>
     <script>
-      class KakaoMapController {
-        constructor() {
-          this.map = null; // 카카오맵 인스턴스
-          this.marker = null; // 마커 인스턴스
-          this.markers = []; // 다중 마커 인스턴스
-          this.isMapReady = false;
-          this.pendingCommands = [];
-
-          this.initializeMap();
-          this.setupMessageListener();
+        // 단순 테스트용 코드
+        const container = document.getElementById('map');
+        const options = {
+            center: new kakao.maps.LatLng(37.5665, 126.9780),
+            level: 3
+        };
+        const map = new kakao.maps.Map(container, options);
+        
+        // React Native WebView 감지
+        if (typeof window.ReactNativeWebView !== 'undefined') {
+            window.ReactNativeWebView.postMessage(JSON.stringify({
+                type: 'mapLoaded'
+            }));
         }
-
-        // 맵 초기화
-        initializeMap() {
-          const initMap = () => {
-            console.log('Initializing Kakao Map...');
-
-            if (typeof kakao !== 'undefined' && kakao.maps) {
-              console.log('Kakao Maps is available');
-
-              const mapContainer = document.getElementById('map');
-
-              // 맵 초기 설정
-              const mapOption = {
-                center: new kakao.maps.LatLng(
-                  Number('{{INITIAL_LATITUDE}}'),
-                  Number('{{INITIAL_LONGITUDE}}'),
-                ),
-                level: 3,
-              };
-
-              this.map = new kakao.maps.Map(mapContainer, mapOption);
-              window.map = this.map;
-
-              this.isMapReady = true;
-              this.processPendingCommands();
-
-              this.postMessage({ type: 'mapLoaded' });
-              console.log('Map initialized successfully');
-            } else {
-              console.error('Kakao Maps is not available');
-              this.postMessage({ type: 'mapError' });
-            }
-          };
-
-          // API 로딩 체크
-          if (typeof kakao !== 'undefined' && kakao.maps) {
-            initMap();
-          } else {
-            const checkKakao = setInterval(() => {
-              if (typeof kakao !== 'undefined' && kakao.maps) {
-                clearInterval(checkKakao);
-                initMap();
-              }
-            }, 100);
-
-            setTimeout(() => {
-              clearInterval(checkKakao);
-              console.error('Kakao Maps loading timeout');
-              this.postMessage({ type: 'mapTimeout' });
-            }, 10000);
-          }
-        }
-
-        createMarker(latitude, longitude) {
-          const markerPosition = new kakao.maps.LatLng(latitude, longitude);
-          this.marker = new kakao.maps.Marker({
-            position: markerPosition,
-          });
-          this.marker.setMap(this.map);
-          window.marker = this.marker;
-        }
-
-        // 메시지 리스너 설정
-        setupMessageListener() {
-          window.addEventListener('message', event => {
-            try {
-              const data = JSON.parse(event.data);
-              console.log('Received message:', data);
-              this.handleCommand(data);
-            } catch (error) {
-              console.error('Error parsing message:', error);
-            }
-          });
-        }
-
-        // 명령어 처리
-        handleCommand(data) {
-          if (!this.isMapReady) {
-            console.log('Map not ready, queuing command:', data);
-            this.pendingCommands.push(data);
-            return;
-          }
-
-          console.log('Executing command:', data);
-          switch (data.type) {
-            case 'panTo':
-              this.panTo(data.latitude, data.longitude);
-              break;
-            case 'setCenter':
-              this.setCenter(data.latitude, data.longitude);
-              break;
-            case 'setMarkerPosition':
-              this.setMarkerPosition(data.latitude, data.longitude);
-              break;
-            case 'setMapLevel':
-              this.setMapLevel(data.level);
-              break;
-            case 'getCenter':
-              this.getCenter(data.messageId);
-              break;
-            case 'setBounds':
-              this.setBounds(data.markers);
-              break;
-            case 'setMultipleMarkers':
-              this.setMultipleMarkers(data.markers);
-              break;
-            case 'clearMarkers':
-              this.clearMarkers();
-              break;
-            default:
-              console.warn('Unknown command:', data.type);
-          }
-        }
-
-        processPendingCommands() {
-          console.log(
-            'Processing pending commands:',
-            this.pendingCommands.length,
-          );
-          while (this.pendingCommands.length > 0) {
-            const command = this.pendingCommands.shift();
-            this.handleCommand(command);
-          }
-        }
-
-        // 지도 이동 (애니메이션 포함)
-        panTo(latitude, longitude) {
-          if (this.map) {
-            const moveLatLng = new kakao.maps.LatLng(latitude, longitude);
-            this.map.panTo(moveLatLng);
-            console.log('Panned to:', latitude, longitude);
-          }
-        }
-
-        // 지도 중심 변경 (애니메이션 미포함)
-        setCenter(latitude, longitude) {
-          if (this.map) {
-            const center = new kakao.maps.LatLng(latitude, longitude);
-            this.map.setCenter(center);
-            console.log('Center set to:', latitude, longitude);
-          }
-        }
-
-        setMarkerPosition(latitude, longitude) {
-          if (this.marker) {
-            const position = new kakao.maps.LatLng(latitude, longitude);
-            this.marker.setPosition(position);
-            console.log('Marker position set to:', latitude, longitude);
-          }
-        }
-
-        // 지도 줌 레벨 설정 (1~14)
-        setMapLevel(level) {
-          if (this.map) {
-            this.map.setLevel(level);
-            console.log('Map level set to:', level);
-          }
-        }
-
-        // 현재 지도 중심 좌표 반환
-        getCenter(messageId) {
-          if (this.map) {
-            const center = this.map.getCenter();
-            const result = {
-              latitude: center.getLat(),
-              longitude: center.getLng(),
-            };
-
-            this.postMessage({
-              messageId: messageId,
-              result: result,
-            });
-
-            console.log('Current center:', result);
-          }
-        }
-
-        // 지도 범위 설정 (다중 마커의 경계)
-        setBounds(markers) {
-          if (this.map && markers && markers.length > 0) {
-            const bounds = new kakao.maps.LatLngBounds();
-
-            markers.forEach(markerData => {
-              const position = new kakao.maps.LatLng(
-                markerData.latitude,
-                markerData.longitude,
-              );
-              bounds.extend(position);
-            });
-
-            this.map.setBounds(bounds);
-            console.log('Map bounds set for', markers.length, 'points');
-          }
-        }
-
-        // 다중 마커 설정
-        setMultipleMarkers(markers) {
-          if (this.map && markers && markers.length > 0) {
-            this.clearMarkers(); // 기존 마커와 오버레이 제거
-
-            const markerImageUrls = {
-              leisure:
-                'https://waymakers-from-staging.s3.ap-northeast-2.amazonaws.com/public-assets/frontend/LeisureMarker.png',
-              search:
-                'https://waymakers-from-staging.s3.ap-northeast-2.amazonaws.com/public-assets/frontend/LeisureMarker.png',
-              hotel:
-                'https://waymakers-from-staging.s3.ap-northeast-2.amazonaws.com/public-assets/frontend/HotelMarker.png',
-              hospital:
-                'https://waymakers-from-staging.s3.ap-northeast-2.amazonaws.com/public-assets/frontend/HospitalMarker.png',
-              restaurant:
-                'https://waymakers-from-staging.s3.ap-northeast-2.amazonaws.com/public-assets/frontend/FoodMarker.png',
-            };
-
-            markers.forEach(markerData => {
-              const position = new kakao.maps.LatLng(
-                markerData.latitude,
-                markerData.longitude,
-              );
-
-              const isLeisureOrSearch =
-                markerData.category === 'leisure' ||
-                markerData.category === 'search';
-
-              const imageUrl =
-                markerImageUrls[markerData.category] || markerImageUrls.leisure;
-
-              const imageSize = isLeisureOrSearch
-                ? new kakao.maps.Size(26, 26)
-                : new kakao.maps.Size(20, 20);
-
-              const imageOption = isLeisureOrSearch
-                ? { offset: new kakao.maps.Point(13, 26) } // 레저/검색 마커: 하단 중앙
-                : { offset: new kakao.maps.Point(10, 20) }; // 기타 마커: 하단 중앙
-
-              const markerImage = new kakao.maps.MarkerImage(
-                imageUrl,
-                imageSize,
-                imageOption,
-              );
-
-              const marker = new kakao.maps.Marker({
-                map: this.map,
-                position: position,
-                title: markerData.title || '',
-                image: markerImage,
-                clickable: true,
-              });
-
-              const borderStyle = isLeisureOrSearch
-                ? 'border: 1px solid #00AEEF;'
-                : '';
-
-              const content = `<div style="height: 19px; background-color: #f7f7f7; border-radius: 15px; padding: 0 8px; display: flex; align-items: center; justify-content: center; ${borderStyle}">
-                  <span style="font-size: 12px; font-weight: 400; color: black; line-height: 20px; letter-spacing: -0.3px;">${markerData.title}</span>
-                </div>`;
-
-              const customOverlay = new kakao.maps.CustomOverlay({
-                position: position,
-                content: content,
-                yAnchor: 0.0, 
-                xAnchor: 0.5,
-              });
-
-              this.markers.push({ marker, customOverlay });
-
-              kakao.maps.event.addListener(marker, 'click', () => {
-                this.postMessage({
-                  type: 'markerClicked',
-                  id: markerData.id,
-                  category: markerData.category,
-                });
-              });
-            });
-
-            this.markers.forEach(item => {
-              item.marker.setMap(this.map);
-              item.customOverlay.setMap(this.map);
-            });
-
-            console.log('Set', markers.length, 'custom markers and overlays');
-          }
-        }
-
-        clearMarkers() {
-          this.markers.forEach(item => {
-            item.marker.setMap(null);
-            if (item.customOverlay) {
-              item.customOverlay.setMap(null);
-            }
-          });
-          this.markers = [];
-          console.log('All markers and overlays cleared');
-        }
-
-        // 메시지 전송
-        postMessage(messageObj) {
-          if (window.ReactNativeWebView) {
-            // 객체를 JSON 문자열로 변환하여 전송
-            window.ReactNativeWebView.postMessage(JSON.stringify(messageObj));
-          } else {
-            console.log(
-              'ReactNativeWebView not available, message:',
-              messageObj,
-            );
-          }
-        }
-      }
-
-      // DOMContentLoaded 이벤트 리스너 설정
-      document.addEventListener('DOMContentLoaded', function () {
-        console.log('DOM loaded, creating map controller...');
-        window.mapController = new KakaoMapController();
-      });
-
-      if (document.readyState === 'loading') {
-        document.addEventListener('DOMContentLoaded', function () {
-          if (!window.mapController) {
-            console.log('Creating map controller as fallback...');
-            window.mapController = new KakaoMapController();
-          }
-        });
-      } else {
-        console.log(
-          'DOM already loaded, creating map controller immediately...',
-        );
-        window.mapController = new KakaoMapController();
-      }
+        
+        console.log('Simple kakao map loaded');
     </script>
-  </body>
+</body>
 </html>
