--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_JS_KEY"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey={{KAKAO_MAP_JS_KEY}}&libraries=services"></script>
 </head>
 <body>
     <div id="map" style="width:100%;height:100vh;"></div>
